# bakeoff

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HUMANS.md  QUEUE.md  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt  run.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  package-results.yml
bench/: clients.py  compare.py  config.py  constants.py  dataset.py  descriptor.py  download.py  failure.py  hardware.py  llama_swap.py  metrics.py  provenance.py  publish.py  queue.py  report.py  report_cli.py  resume.py  runner.py  scoring.py  signing.py  store.py
datasets/: dumb_model_tasks.jsonl
issue-38/: README.md
issue-38/tickets/: _manifest.md
issue-38/tickets/12/: 4491873240.md  4494171918.md  4495675210.md  4495777337.md  4496938804.md  4497170538.md  4501587412.md  4503203398.md  4503469716.md  4503669210.md  4507779592.md  issue.md
issue-38/tickets/13/: 4507791272.md  4512182181.md  4512649799.md  4513796211.md  4513822952.md  4516038912.md  4519072195.md  4519569754.md  4519570310.md  4522549514.md  4522610944.md  4524200643.md  4524304026.md  4524573993.md  4525059885.md  4533208484.md  4533310100.md  4533385174.md  4533408702.md  4533665446.md  4533761289.md  4570344944.md  4570546649.md  issue.md
issue-38/tickets/14/: 4503203471.md  4503447437.md  4503669279.md  4505728892.md  4505741990.md  4505899850.md  4506245788.md  4506576614.md  4506717026.md  4507534186.md  4507781031.md  issue.md
issue-38/tickets/15/: 4522737381.md  4522798455.md  4524243217.md  4524304061.md  4524626223.md  4525059995.md  4533235030.md  4533311354.md  4533402406.md  4533410862.md  4570345289.md  4570546812.md  issue.md
issue-38/tickets/17/: issue.md
issue-38/tickets/18/: issue.md
issue-38/tickets/19/: issue.md
issue-38/tickets/20/: issue.md
issue-38/tickets/21/: issue.md
issue-38/tickets/22/: 4533634217.md  4533647917.md  4533894066.md  4533933819.md  4534370703.md  4534654458.md  4550408728.md  (+17 more)
issue-38/topic_summary/: gpu_architecture.md  gpu_hardware.md  interface_type.md  model_descriptor.md  model_trust.md  open_questions.md  persistence_layout.md  process_meta.md  run_hardware_metrics.md  run_model_metrics.md  scheduling_queue.md  system_gpu_link.md  system_hardware.md  system_software.md  tflops_source.md  uuids.md
issue-38/topics/: gpu_architecture.md  gpu_hardware.md  interface_type.md  model_descriptor.md  model_trust.md  persistence_layout.md  process_meta.md  run_hardware_metrics.md  run_model_metrics.md  scheduling_queue.md  system_gpu_link.md  system_hardware.md  system_software.md  tflops_source.md  uuids.md
migrate/: go.mod  go.sum  migrate_test.go  record.go  record_builtins.go  runner.go  schema_builtins.go
migrate/cmd/: main.go
schema/: schema.sql
schema/seeds/: interface_types.json  model_architectures.json  model_file_formats.json  quantization_methods.json
specs/: index.md
specs/disk-persistence-layer/: plan.md  spec.md  tasks.md
specs/score-incomplete-and-dumb-model-tier/: spec.md
tests/: test_clients.py  test_compare.py  test_config.py  test_dataset.py  test_descriptor.py  test_download.py  test_failure.py  test_llama_swap.py  test_metrics.py  test_power_sampler.py  test_provenance.py  test_publish.py  test_queue.py  test_report.py  test_report_cli.py  test_resume.py  test_runner.py  test_scoring.py  test_signing.py  test_store.py
(+387 files in other folders)
