[project]
name = "bakeoff"
version = "0.1.0"
description = "Local LLM N-vs-N benchmark harness (llama.cpp podman + OpenAI-compat)."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.28.1",
    "huggingface_hub>=1.12.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "types-PyYAML>=6.0.12.20260408",
]

# Auto-discovery trips over the gitignored `results/` and `datasets/` output
# directories when they exist on disk during `pip install -e .`. Pin the
# package set explicitly so local dev installs don't depend on those dirs
# being absent.
[tool.setuptools]
packages = ["bench"]

# --- Ruff ------------------------------------------------------------------
# Runner/reporter text contains user-facing Unicode (×, em dashes, etc.) by
# design; fixture prompts in dataset.py are long literal strings. Keep lint
# discipline but exempt those.
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"bench/dataset.py" = ["E501"]   # fixture prompts are intentionally long
"bench/report.py"  = ["RUF001", "E501"] # intentional × in UI strings; long literal HTML/table rows

# --- Mypy ------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

# --- Pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
